--- a/src/template.html
+++ b/src/template.html
@@ -206,7 +206,7 @@
           <a
             target="_blank"
             class="cta-btn cta-btn--resume"
-            href="mailto:tew.meko@gmail.com"
+            href="mailto:tewodros@tewodrosmekonnen.com"
             >Let's Connect!</a
           >
         </div>
