--- a/src/template.html
+++ b/src/template.html
@@ -6,11 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    
-    
     <link rel="manifest" href="/site.webmanifest">
-    <!-- <link rel="shortcut icon" type="image/png" href="./assets/favicon-32x32.png" /> -->
-    <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon.png">
+    <link rel="shortcut icon" type="image/png" sizes="32x32" href="./assets/favicon.png" />
+    <!-- <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon.png"> -->
     <title>Tewodros Mekonnen | Web Developer</title>
     <meta name="keywords" content="[Tewodros-Mekonnen], [Tewodros Mekonnen], Tewodros, web developer, dvloper, developer, junior developer, junior web developer, Tewodros,javascript" />
     <meta name="description" content="Tewodros Mekonnen | Web Developer (Java | JavaScript)" />
