--- a/src/template.html
+++ b/src/template.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="manifest" href="/site.webmanifest">
-    <link rel="shortcut icon" type="image/png" sizes="32x32" href="./assets/favicon.png" />
+    <link rel="shortcut icon" type="image/png" sizes="16x16" href="./assets/favicon-16x16.png" />
     <!-- <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon.png"> -->
     <title>Tewodros Mekonnen | Web Developer</title>
     <meta name="keywords" content="[Tewodros-Mekonnen], [Tewodros Mekonnen], Tewodros, web developer, dvloper, developer, junior developer, junior web developer, Tewodros,javascript" />
