--- a/src/template.html
+++ b/src/template.html
@@ -30,9 +30,9 @@
     <div id="hero" class="jumbotron">
       <div class="container">
         <h1 class="hero-title" class="load-hidden">
-          Hi, my name is <span class="text-color-main">Tewodros Mekonnen</span>
+          Hi, my name is <span class="text-color-main">Tewodros Mekonnen,</span>
           <br />
-          I'm a Web Developer.
+          I'm a Web Developer!
         </h1>
         <p class="hero-cta" class="load-hidden">
           <a class="cta-btn cta-btn--hero" href="#about">Know more</a>
