added phone and email

--- a/src/template.html
+++ b/src/template.html
@@ -62,16 +62,16 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info">
               <p class="about-wrapper__info-text">
-                  Hi, my name is Tewodros Mekonnen. I am a web developer based in Houston, TX. 
+                  I am based in Houston, TX. 
                   I graduated from Houston Community College with an Associates of Science in Computer Science. 
                   I studied Object-Oriented Programming in Java, Data Structures & Algorithms and Computer Architecture, while I was in college. 
                   After graduation from college, I joined an online web developer Bootcamp and thought my self to become a full-stack web developer. 
-                  Web development is my passion. As time goes by, my coding skill is increasing tremendously. 
+                  Web development is my passion. As time goes by, my coding skill is improving with more and more practice. 
               </p>
               <p class="about-wrapper__info-text">
                   Below, please find various projects that I have recently built to showcase my web developer skills. 
                   Learning never stops! My fast and enthusiastic learning skill and a can-do attitude is something that I am always proud of. 
-                  If I am given an opportunity, I will make you proud : )!
+                  If I am given an opportunity, I am ready to hundle everything thrown at me!<span class="happy-face" >:)</span>
               </p>
               <span class="d-flex mt-3">
                 <a target="_blank" class="cta-btn cta-btn--resume" href="https://drive.google.com/file/d/1iBbmBh5uvyLtLQR3U7TLrRDCYIst-1ge/view?usp=sharing">
@@ -101,8 +101,8 @@
                   <h3 class="project-wrapper__text-title">Solar Aces</h3>
                   <div>
                     <p class="mb-4">
-                      I built this Bootstrap website while I was taking a summer course 
-                      at NASA L'Space Mission Concept Academy to showcase my team's accomplishments. 
+                      My team and I built this Bootstrap website while we were taking a summer course 
+                      at NASA L'Space Mission Concept Academy to showcase our team's accomplishments. 
                     </p>
                   </div>
                   <a target="_blank" class="cta-btn cta-btn--hero" href="https://tewodros-mekonnen.github.io/SolarAces/">
@@ -133,7 +133,7 @@
                 <h3 class="project-wrapper__text-title">Robofriends</h3>
                 <div>
                   <p class="mb-4">
-                    An app built using React. This is a very simple app that performs search based on friends name. 
+                    I built this app using React. This is a very simple app that performs search based on friends name. 
                     While building this app, I was able to learn a lot about React and its amazing performance.  
                   </p>
                 </div>
@@ -165,8 +165,9 @@
                 <h3 class="project-wrapper__text-title">Gradient Background Generator</h3>
                 <div>
                   <p class="mb-4">
-                    This app is built using JavaScript, Html and CSS. Using the default colour pickers, the app can generate a gradient
-                    background and displays the equivalent RGB values so that we can use them in other projects.
+                    After I became familiar with JavaScript, HTML and CSS, I was able to build this app. 
+                    The app can generate a gradient background, using the default colour pickers, 
+                    and displays the equivalent RGB values. 
                   </p>
                 </div>
                 <a target="_blank" class="cta-btn cta-btn--hero" href="https://tewodros-mekonnen.github.io/Gradient-Background-Generator/">
@@ -205,11 +206,12 @@
           <p class="contact-wrapper__text">
             Would you like to contact me?
           </p>
+          <h3 class="telephone" >Cell : <span>(713)240-0273</span></h3>
           <a
             target="_blank"
-            class="cta-btn cta-btn--resume"
+            class="e-mail"
             href="mailto:tewodros@tewodrosmekonnen.com"
-            >Let's Connect!</a
+            >Email : <span>tewodros@tewodrosmekonnen.com</span></a
           >
         </div>
       </div>
