few adjustments on contact info

--- a/src/template.html
+++ b/src/template.html
@@ -206,13 +206,21 @@
           <p class="contact-wrapper__text">
             Would you like to contact me?
           </p>
-          <h3 class="telephone" >Cell : <span>(713)240-0273</span></h3>
+         
           <a
-            target="_blank"
-            class="e-mail"
-            href="mailto:tewodros@tewodrosmekonnen.com"
-            >Email : <span>tewodros@tewodrosmekonnen.com</span></a
-          >
+              target="_blank"
+              class="e-mail"
+              href="mailto:tewodros@tewodrosmekonnen.com"
+              >Email : <span>tewodros@tewodrosmekonnen.com</span>
+          </a>
+          <h3 class="telephone" >Cell : <span>(713)240-0273</span></h3>
+           <div>
+                <a
+                target="_blank"
+                class="cta-btn cta-btn--email"
+                href="mailto:tew.meko@gmail.com"
+                >E-mail me!</a> 
+            </div>
         </div>
       </div>
     </section>
