added a java project

--- a/src/template.html
+++ b/src/template.html
@@ -94,7 +94,38 @@
           </h2>
 
           <!-- Each row is a project -->
-          <!-- project 1 -->
+          <!-- project 1 start -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text">
+                <h3 class="project-wrapper__text-title">Java, Double Linked List</h3>
+                <div>
+                  <p class="mb-4">
+                    I wrote this Java program to present it as a final college project. 
+                    It can open and read a file and then creates an array of Strings. 
+                    It also has different methods to insert, search, remove and display a node. 
+                  </p>
+                </div>
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://drive.google.com/file/d/1LBVeA5s6xDQdSm6AdpQVYyXyYR5II2kh/view?usp=sharing">
+                  See Live
+                </a>
+                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/Tewodros-Mekonnen/JavaProject">
+                  Source Code
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image">
+                <a href="https://github.com/Tewodros-Mekonnen/JavaProject" target="_blank">
+                  <div data-tilt class="thumbnail rounded">
+                    <img class="img-fluid" src="./assets/java-project.png" />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project-1 -->
+          <!-- project 2 start -->
           <div class="row">
               <div class="col-lg-4 col-sm-12">
                 <div class="project-wrapper__text">
@@ -123,10 +154,10 @@
                 </div>
               </div>
             </div>
-            <!-- /END Project -->
+            <!-- /END Project-2 -->
 
           <!-- Each .row is a project -->
-          <!-- project 2 -->
+          <!-- project 3 -->
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
@@ -155,10 +186,10 @@
               </div>
             </div>
           </div>
-          <!-- /END Project -->
+          <!-- /END Project-3 -->
 
           <!-- Each .row is a project -->
-          <!-- project 3 -->
+          <!-- project 4 -->
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
@@ -188,7 +219,7 @@
               </div>
             </div>
           </div>
-          <!-- /END Project -->
+          <!-- /END Project-4 -->
 
           
         </div>
