updated email, removed link

--- a/src/template.html
+++ b/src/template.html
@@ -106,9 +106,9 @@
                     It also has different methods to insert, search, remove and display a node. 
                   </p>
                 </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="https://drive.google.com/file/d/1seXgNHvdQmxfY0sOBpcqgbgx84yEgfci/view?usp=sharing">
+                <!-- <a target="_blank" class="cta-btn cta-btn--hero" href="#!">
                   See Demo
-                </a>
+                </a> -->
                 <a target="_blank" class="cta-btn text-color-main" href="https://github.com/Tewodros-Mekonnen/JavaProject">
                   Source Code
                 </a>
@@ -249,7 +249,7 @@
                 <a
                 target="_blank"
                 class="cta-btn cta-btn--email"
-                href="mailto:tew.meko@gmail.com"
+                href="mailto:tewodros@tewodrosmekonnen.com"
                 >E-mail me!</a> 
             </div>
         </div>
