edited about me section

--- a/src/template.html
+++ b/src/template.html
@@ -64,7 +64,7 @@
               <p class="about-wrapper__info-text">
                   I am based in Houston, TX. 
                   I graduated from Houston Community College with an Associates of Science in Computer Science. 
-                  I studied Object-Oriented Programming in Java, Data Structures & Algorithms and Computer Architecture, while I was in college. 
+                  While I was in college, I studied Object-Oriented Programming in Java, Data Structures & Algorithms and Computer Architecture. 
                   After graduation from college, I joined an online web developer Bootcamp and thought my self to become a full-stack web developer. 
                   Web development is my passion. As time goes by, my coding skill is improving with more and more practice. 
               </p>
