edited about me section

--- a/src/template.html
+++ b/src/template.html
@@ -32,7 +32,7 @@
         <h1 class="hero-title" class="load-hidden">
           Hi, my name is <span class="text-color-main">Tewodros Mekonnen,</span>
           <br />
-          I'm a Web Developer!
+          I'm a Software Developer!
         </h1>
         <p class="hero-cta" class="load-hidden">
           <a class="cta-btn cta-btn--hero" href="#about">Know more</a>
@@ -69,7 +69,7 @@
                   Web development is my passion. As time goes by, my coding skill is improving with more and more practice. 
               </p>
               <p class="about-wrapper__info-text">
-                  Below, please find various projects that I have recently built to showcase my web developer skills. 
+                  Below, please find various projects that I have recently built to showcase my Web/Software developer skills. 
                   Learning never stops! My fast and enthusiastic learning skill and a can-do attitude is something that I am always proud of. 
                   If I am given an opportunity, I am ready to hundle everything thrown at me!<span class="happy-face" >:)</span>
               </p>
