--- a/src/template.html
+++ b/src/template.html
@@ -8,7 +8,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="manifest" href="/site.webmanifest">
     <link rel="shortcut icon" type="image/png" sizes="32x32" href="./assets/favicon3.png" />
-    <title>Tewodros Mekonnen | Web Developer</title>
+    <title>Tewodros Mekonnen | Software Developer</title>
     <meta name="keywords" content="[Tewodros-Mekonnen], [Tewodros Mekonnen], Tewodros, web developer, dvloper, developer, junior developer, junior web developer, Tewodros,javascript" />
     <meta name="description" content="Tewodros Mekonnen | Web Developer (Java | JavaScript)" />
     <!-- Required librarys -->
