--- a/src/template.html
+++ b/src/template.html
@@ -65,13 +65,13 @@
                   I am based in Houston, TX. 
                   I graduated from Houston Community College with an Associates of Science in Computer Science. 
                   While I was in college, I studied Object-Oriented Programming in Java, Data Structures & Algorithms and Computer Architecture. 
-                  After graduation from college, I joined an online web developer Bootcamp and thought my self to become a full-stack web developer. 
-                  Web development is my passion. As time goes by, my coding skill is improving with more and more practice. 
+                  After graduation from college, I took an online web and Software developer course and thought my self to become a full-stack software developer. 
+                  Software development is my passion. As time goes by, my coding skill is improving with more and more practice. 
               </p>
               <p class="about-wrapper__info-text">
                   Below, please find various projects that I have recently built to showcase my Web/Software developer skills. 
                   Learning never stops! My fast and enthusiastic learning skill and a can-do attitude is something that I am always proud of. 
-                  If I am given an opportunity, I am ready to hundle everything thrown at me!<span class="happy-face" >:)</span>
+                  If I am given an opportunity, I am ready to hundle everything thrown at me!<br> Thank you!<span class="happy-face" >:)</span>
               </p>
               <span class="d-flex mt-3">
                 <a target="_blank" class="cta-btn cta-btn--resume" href="https://drive.google.com/file/d/1iBbmBh5uvyLtLQR3U7TLrRDCYIst-1ge/view?usp=sharing">
@@ -94,6 +94,40 @@
           </h2>
 
           <!-- Each row is a project -->
+          <!-- project 0 start -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text">
+                <h3 class="project-wrapper__text-title">Spring-MVC, Hibernate and Spring Security</h3>
+                <div>
+                  <p class="mb-4">
+                    I developed this Web App to present my skill on Spring MVC, 
+                    Hibernate (using MySQL) and Spring Security. The App provides access 
+                    restriction based on different Roles. 
+                    ROLE_ADMIN gets full access, ROLE_MANAGER gets partial access and, ROLE_EMPLOYEE gets view-only access. 
+                    Please, click on See Live button to see the App in action.  
+                  </p>
+                </div>
+                <a target="_blank" class="cta-btn cta-btn--hero" href="http://www.customer-registration-app-tewodros-mekonnen.com/showMyLoginPage">
+                  See Live
+                </a>
+                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/Tewodros-Mekonnen/Customer_Relationship_Management_app_with_spring_security">
+                  Source Code
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image">
+                <a href="http://www.customer-registration-app-tewodros-mekonnen.com/showMyLoginPage" target="_blank">
+                  <div data-tilt class="thumbnail rounded">
+                    <img class="img-fluid" src="./assets/CRM.png" />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project-0 -->
+          
           <!-- project 1 start -->
           <div class="row">
             <div class="col-lg-4 col-sm-12">
@@ -103,7 +137,7 @@
                   <p class="mb-4">
                     I wrote this Java program to present it as a final college project. 
                     It can open and read a file and then creates an array of Strings. 
-                    It also has different methods to insert, search, remove and display a node. 
+                    It also has different methods to insert, search, remove and display. 
                   </p>
                 </div>
                 <!-- <a target="_blank" class="cta-btn cta-btn--hero" href="#!">
