edited project description

--- a/src/template.html
+++ b/src/template.html
@@ -102,7 +102,7 @@
                 <div>
                   <p class="mb-4">
                     I developed this Web App to present my skill on Spring MVC, 
-                    Hibernate (using MySQL) and Spring Security. The App provides access 
+                    Hibernate (using MySQL) and Spring Security with Bcrypt Password Encryption. The App provides access 
                     restriction based on different Roles. 
                     ROLE_ADMIN gets full access, ROLE_MANAGER gets partial access and, ROLE_EMPLOYEE gets view-only access. 
                     Please, click on See Live button to see the App in action.  
