--- a/src/template.html
+++ b/src/template.html
@@ -73,11 +73,11 @@
                   Learning never stops! My fast and enthusiastic learning skill and a can-do attitude is something that I am always proud of. 
                   If I am given an opportunity, I am ready to hundle everything thrown at me!<br> Thank you!<span class="happy-face" >:)</span>
               </p>
-              <span class="d-flex mt-3">
+              <!-- <span class="d-flex mt-3">
                 <a target="_blank" class="cta-btn cta-btn--resume" href="https://drive.google.com/file/d/16r4IUCMZTeXl_vM7Arldcedo9vwyohVK/view?usp=sharing">
                   View Resume
                 </a>
-              </span>
+              </span> -->
             </div>
           </div>
         </div>
