--- a/src/template.html
+++ b/src/template.html
@@ -32,7 +32,7 @@
         <h1 class="hero-title" class="load-hidden">
           Hi, my name is <span class="text-color-main">Tewodros Mekonnen,</span>
           <br />
-          I'm a Software Developer!
+          I'm a Software Developer! and i love it!
         </h1>
         <p class="hero-cta" class="load-hidden">
           <a class="cta-btn cta-btn--hero" href="#about">Know more</a>
@@ -318,4 +318,7 @@
       
     </footer>
   </body>
+
 </html>
+
+
