--- a/src/template.html
+++ b/src/template.html
@@ -126,7 +126,7 @@
                 <a href="http://www.customer-registration-app-tewodros-mekonnen.com/showMyLoginPage" target="_blank">
                   <div data-tilt class="thumbnail rounded">
                    <!-- <img class="img-fluid" src="./assets/CRM.png" /> -->
-                    <img class="img-fluid" src="./assets/temporarily-unavailable.png" />
+                    <!-- <img class="img-fluid" src="./assets/temporarily-unavailable.png" /> -->
                   </div>
                 </a>
               </div>
